# csplanner

./: .cz.toml  .gitignore  Makefile  README.md  Tiltfile
csai/: Dockerfile  README.md  pyproject.toml
csai/csai/ai/: bot.py  prompt_templates.py
csai/csai/server/: main.py
csai/notebooks/: debug.ipynb
cssaas/: .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
cssaas/prisma/: schema.prisma
cssaas/src/: app.css  app.html
cssaas/src/routes/: +layout.svelte  +page.svelte
cssaas2/src/: app.html
csserver/: DockerMCP  DockerProcessor  Dockerfile  csmap.yaml  go.mod  go.sum
csserver/migrations/: .csmig.yaml  runner_test.go
csweb/: .prettierignore  Dockerfile  codegen.ts  eslint.config.js  graphql.schema.json  jsconfig.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  vite.config.ts
csweb/src/: app.css  app.html
docs/: README.md
scripts/: db-reset.sh  db.sh  devdeps.sh  install.sh  k8s-secrets.sh  masterdb.sh  run.sh
scripts/k8s/: sc.yaml
tilt_lib/csai/: Tiltfile
tilt_lib/csmcp/: Tiltfile
tilt_lib/csprocessor/: Tiltfile
tilt_lib/cssaas/: Tiltfile
tilt_lib/csserver/: Tiltfile
tilt_lib/csweb/: Tiltfile
tilt_lib/debug/: Tiltfile
tilt_lib/keycloak/: README.md  Tiltfile  csplanner-realm-export.json  values.local.yaml
tilt_lib/nats/: Tiltfile  values.local.yaml
tilt_lib/ollama/: Tiltfile  values.local.yaml
tilt_lib/postgres/: Tiltfile  setup.sh  values.local.yaml
tilt_lib/surrealdb/: Tiltfile  values.local.yaml
tilt_lib/vault/: Tiltfile  values.local.yaml
(+600 files in other folders)
